# so101_isaac_sim

./: README.md  robot_description.txt  robot_description_mono.txt  so_100_armarm_BaseFixed_Gripper_5000_1.000000_1.000000.ikcache
isaac_sim/: README.md  simulation_architecture.md
isaac_sim/scripts/: cameras.py  cloth_utils.py  config.py  fk_check.py  generate_urdf.py  import_urdf_to_usd.py  motors.py  setup_scene.py
isaac_sim/urdf/: so_100_dual.urdf
isaac_sim/usd/: so_100_dual.usd
isaac_sim/usd/configuration/: so_100_dual_physics.usd  so_100_dual_robot.usd  so_100_dual_sensor.usd
src/SO-100-arm/config/: joint_limits_dual.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so_100_arm.ros2_control.xacro  so_100_arm.srdf  so_100_arm.urdf.xacro  so_100_arm_single.urdf.xacro  so_100_dual.srdf  so_100_dual.urdf.xacro
src/SO-100-arm/launch/: hardware.launch.py  moveit.launch.py  moveit_isaac.launch.py  moveit_isaac_dual.launch.py  rviz.launch.py
src/so_arm_100_hardware/: .gitignore  CMakeLists.txt  README.md  package.xml  so_arm_100_hardware.xml
src/so_arm_100_hardware/config/: calibration.yaml  hardware_config.yaml
src/so_arm_100_hardware/include/so_arm_100_hardware/: so_arm_100_interface.hpp
src/so_arm_100_hardware/scripts/: calibrate_arm.py  jog_joints.py  zero_pose.py
src/so_arm_100_hardware/src/: so_arm_100_interface.cpp
src/so_arm_100_hardware/test/: ping_test.cpp  test_servo.cpp
