<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_100_hardware</name>
  <version>0.1.1</version>
  <description>ROS2 Control Hardware Interface for SOARM-100 low-cost 5DoF robotic manipulator.</description>
  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- This package was generated using the Turtle Nest ROS 2 package creator -->
